Fixing steps map table with so that the rows do not wrap

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -25,3 +25,8 @@
     text-align: center;
     color: black;
 }
+
+.modal-body {
+    max-width: 100%;
+    overflow-x: auto;
+}
